--- a/project/src/css/style.css
+++ b/project/src/css/style.css
@@ -271,7 +271,7 @@ header ul li a {
 }
 
 .sec3 .container .sec3-inner .sec3-slider .item .text .streaming-services .spotify-logo .spotify-text:hover {
-    color: green;
+    color: #1fdf64;
 }
 
 .sec3 .container .sec3-inner .sec3-slider .item .text .streaming-services .apple-logo .apple-text:hover {
