--- a/project/src/css/textarea.css
+++ b/project/src/css/textarea.css
@@ -12,32 +12,32 @@
 .sec1-inner {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 }
 .sec1 .text {
     width: 47%;
 }
 .sec1 .text-left {
-    text-align: right;
+    /*text-align: right;*/
 }
 .sec1 .text-right {
-    text-align: left;
+    text-align: center;
 }
-.sec1:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: linear-gradient(to left, transparent, #fff, transparent);
-}
-.sec1:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: linear-gradient(to left, transparent, #fff, transparent);
-}
+/*.sec1:before {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 1px;*/
+/*    background: linear-gradient(to left, transparent, #fff, transparent);*/
+/*}*/
+/*.sec1:after {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    bottom: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 1px;*/
+/*    background: linear-gradient(to left, transparent, #fff, transparent);*/
+/*}*/
