--- a/project/src/css/videos.css
+++ b/project/src/css/videos.css
@@ -1,4 +1,4 @@
-.secVid .container .secVid-inner .secVid-slider .item {
+.secVid .container .secVid-inner .secVid-slider .item{
     transition: all ease 0.5s 0s;
     height: 100%;
 }
@@ -17,7 +17,7 @@
 }
 
 .secVid .item img {
-    max-height: 400px;
+    max-height: 200px;
     width: 390px;
     max-width: 100%;
     display: flex;
@@ -25,6 +25,7 @@
     justify-content: center;
     padding-right: 5px;
     padding-left: 5px;
+    cursor: pointer;
 }
 
 .secVid {
@@ -37,7 +38,6 @@
 }
 .secVid-slider {
     margin-top: 40px;
-    margin-bottom: 60px;
 }
 
 .slick-slide {
@@ -48,8 +48,8 @@
     max-height: 200px;
 }
 
-.slick-slide, .slick-current, .slick-active {
-    max-height: 400px;
+.video-box .slick-slide, .slick-current, .slick-active {
+    max-height: 200px;
 }
 
 .slick-prev:before {
@@ -62,5 +62,6 @@
 }
 
 .video-box {
+    margin-top: 40px;
     height: 450px;
 }
