--- a/css/header.css
+++ b/css/header.css
@@ -25,14 +25,33 @@ header ul li {
     margin: 0 20px;
 }
 
-@media (max-width: 640px) {
+.mobile-view {
+    display: none;
+}
+
+
+@media (max-width: 900px) {
+    .mobile-view {
+        display: flex;
+        align-items: center;
+    }
     .nav-items {
-        display: table-cell;
-        vertical-align: middle;
-        width: 110px;
         align-items: center;
         justify-content: center;
         text-align: center;
+        font-weight: 600;
+        font-size: xx-large;
+    }
+    .desktop-view {
+        display: none;
+    }
+    .lists {
+        /*background-color: rgba(74, 74, 74, 0.3);*/
+        /*border-radius: 10px;*/
+        /*z-index: 2;*/
+    }
+    .left-menu, .right-menu {
+        /*z-index: 3;*/
     }
 }
 
