--- a/css/songs.css
+++ b/css/songs.css
@@ -97,9 +97,15 @@
 }
 .sec2 h2 {
     text-transform: uppercase;
-    max-width: 60%;
     font-weight: 100;
 }
+
+@media (max-width: 1200px) {
+    .sec2 h2 {
+        text-align: center;
+    }
+}
+
 .sec2-slider {
     margin-top: 40px;
     margin-bottom: 60px;
