--- a/css/landing.css
+++ b/css/landing.css
@@ -29,6 +29,38 @@
     font-size: xx-large;
 }
 
+.go-to-mobile {
+    display: none;
+}
+
+@media (min-width: 1201px) {
+    .banner .go-to {
+        display: block;
+        color: #fff;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: xx-large;
+    }
+}
+
+@media (max-width: 1200px) {
+    .go-to{
+        display: none;
+    }
+    .go-to-mobile {
+        display: block;
+        color: #fff;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: xx-large;
+    }
+    .go-to-helper {
+        padding-top: 20px;
+        text-align: center;
+        padding-bottom: 130px;
+    }
+}
+
 .banner .go-to:before {
     font-family: FontAwesome, sans-serif;
     content: "\f078";
@@ -46,6 +78,10 @@
     font-weight: 200;
     margin-bottom: 10px;
     font-size: 48px;
+}
+
+.mobile-logo {
+    padding-top: 15px;
 }
 
 .mobile-media {
