--- a/css/landing.css
+++ b/css/landing.css
@@ -79,11 +79,11 @@
     margin-bottom: 10px;
     font-size: 48px;
 }
-
+/*
 .mobile-logo {
     padding-top: 15px;
 }
-
+*/
 .mobile-media {
     display: none;
 }
